# Azure-RTOS-GUIX-Flip-Dot-Display-Driver

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  ReadMe.md  THIRDPARTYNOTICE.txt  app_manifest.json  flipdot_graphics_driver.c  flipdot_graphics_driver.h  flipdot_guix.gxp  flipdot_guix_resources.c  flipdot_guix_resources.h  flipdot_guix_specifications.c  flipdot_guix_specifications.h  linker.ld  main.c  threadx_app.c
